--- a/index.html
+++ b/index.html
@@ -5,6 +5,95 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visualización Fibonacci Heap</title>
     <script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
+
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #1e1e1e;
+            color: #ffffff;
+            display: flex;
+            flex-direction: column;
+        }
+        header {
+            background-color: #252526;
+            padding: 10px 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 1px solid #333;
+            flex: 0 0 auto;
+        }
+        h1 {
+            margin: 0;
+            font-size: 1.2rem;
+            color: #007acc;
+        }
+        #controls {
+            display: flex;
+            gap: 10px;
+            align-items: center;
+        }
+        button {
+            background-color: #0e639c;
+            color: white;
+            border: none;
+            padding: 8px 16px;
+            cursor: pointer;
+            border-radius: 2px;
+            font-size: 0.9rem;
+        }
+        button:hover {
+            background-color: #1177bb;
+        }
+        button:disabled {
+            background-color: #3a3d41;
+            cursor: not-allowed;
+            color: #888;
+        }
+        #step-info {
+            font-weight: bold;
+            min-width: 200px;
+            text-align: center;
+        }
+        #mynetwork {
+            flex: 1 1 auto;
+            width: 100%;
+            height: 100%;
+            background-color: #1e1e1e;
+            position: relative;
+            overflow: hidden;
+        }
+        #legend {
+            position: absolute;
+            bottom: 20px;
+            left: 20px;
+            background-color: rgba(37, 37, 38, 0.8);
+            padding: 10px;
+            border-radius: 4px;
+            border: 1px solid #333;
+            z-index: 1000;
+        }
+        .legend-item {
+            display: flex;
+            align-items: center;
+            margin-bottom: 5px;
+            font-size: 0.8rem;
+        }
+        .dot {
+            width: 12px;
+            height: 12px;
+            border-radius: 50%;
+            margin-right: 8px;
+            border: 1px solid #fff;
+        }
+    </style>
+
 </head>
 <body>
     <header>
