feat: completar estructura visual con controles y leyenda

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
             border: 1px solid #fff;
         }
     </style>
-
 </head>
+
 <body>
     <header>
         <h1>Fibonacci Heap Visualizer</h1>
@@ -108,9 +108,18 @@
     <div id="mynetwork"></div>
 
     <div id="legend">
-        <div class="legend-item"><div class="dot"></div>Nodo Normal</div>
-        <div class="legend-item"><div class="dot"></div>Mínimo Global</div>
-        <div class="legend-item"><div class="dot"></div>Marcado</div>
+        <div class="legend-item">
+            <div class="dot" style="background-color: #97c2fc;"></div>
+            Nodo Normal
+        </div>
+        <div class="legend-item">
+            <div class="dot" style="background-color: #ffff00;"></div>
+            Mínimo Global
+        </div>
+        <div class="legend-item">
+            <div class="dot" style="background-color: #ffcccc;"></div>
+            Marcado
+        </div>
     </div>
 
 </body>
